--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ github_repo: "https://github.com/Dysonsun/dysonsun.github.io.git" # you code rep
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Plus.ai, Perception Engineer"
 sidebar-avatar: /img/about-SD-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-# zhihu_username:     qiubaiying
+weibo_username:     
+zhihu_username:     
 github_username:    Dysonsun
-# facebook_username:  baiying.qiu.7
-# jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+facebook_username:  
+jianshu_username:   
+twitter_username:   
 
 
 
@@ -31,7 +31,7 @@ github_username:    Dysonsun
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
-paginate: 10
+paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
